--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
       border: 1px solid rgba(255, 255, 255, 0.2);
       display: inline-block;
     }
+    
+    #clearBtn {
+  background: rgba(244, 67, 54, 0.7);
+  border-color: rgba(244, 67, 54, 0.8);
+}
+#clearBtn:hover {
+  background: rgba(244, 67, 54, 0.9);
+}
+
   </style>
 </head>
 <body>
